--- a/scripts/validation - data download and collate.Rmd
+++ b/scripts/validation - data download and collate.Rmd
@@ -1485,7 +1485,8 @@ gloeo_temp_dstadj <- gloeo_temp_dstadj %>%
   select(-year, -approx_depth_m)
 
 #join with loc data
-gloeo_temp_dstadj <- full_join(gloeo_temp_dstadj, gloeo_locs)
+gloeo_temp_dstadj <- full_join(gloeo_temp_dstadj, gloeo_locs) %>% 
+        filter(depth_m <= 1.5)
 
 #add source info, rename site to location
 gloeo_temp_dstadj <- gloeo_temp_dstadj %>% 
